k8s/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kafka
  namespace: uber-mini

spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.6.0
          ports:
            - containerPort: 9092
