k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres
  namespace: uber-mini

spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
