k8s/zookeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: zookeeper
  namespace: uber-mini

spec: 
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.6.0
          ports:
            - containerPort: 2181
