k8s/kafka-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: kafka-service
  namespace: uber-mini

spec:
  selector:
    app: kafka

  ports:
    - port: 9092
      targetPort: 9092
