k8s/zookeeper-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: zookeeper-service
  namespace: uber-mini

spec:
  selector:
    app: zookeeper
  ports:
    - port: 2181
      targetPort: 2181
